--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "tailwind.config.ts", "app/about-us", "app/our-plumbing-services"  ],
+, "tailwind.config.ts", "app/about-us", "app/our-plumbing-services", "app/privacy-policy/page.js"  ],
   "exclude": [
     "node_modules"
   ]
