--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/gtag.js": "^0.0.19",
     "@types/node": "20.11.19",
     "@types/react": "18.2.56",
     "autoprefixer": "^10.0.1",
