--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@next/third-parties": "^14.1.3",
     "@radix-ui/react-label": "^2.0.2",
     "@tabler/icons-react": "^2.47.0",
     "cal-sans": "^1.0.1",
@@ -17,7 +18,7 @@
     "fonts": "^0.0.2",
     "framer-motion": "^11.0.8",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
